# picotorrent

./: .gitattributes  .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  CMakeLists.txt  GitVersion.yml  LICENSE  LICENSE.rtf  NuGet.config  README.md  appveyor.yml  build.cake  build.ps1  crowdin.yaml  vcpkg.json
.github/: FUNDING.yml
.github/workflows/: ci.yml
chocolatey/: picotorrent.nuspec
chocolatey/tools/: chocolateyinstall.ps1.template  chocolateyuninstall.ps1
cmake/: Git.cmake  GitVersion.cmake  boost.cmake  libtorrent.cmake
docs/: Building-PicoTorrent.md  Logging.md  Makefile  Overview.md  PicoTorrent-Configuration.md  make.bat
docs/src/: conf.py  configuration.rst  creating-torrents.rst  how-to.rst  index.rst  installing.rst  ipfilter.rst  keyboard-shortcuts.rst  plugins.rst  pql.rst  privacy.rst  windows-service.rst
include/: atlframe.h  atlgdi.h  libpico.h  picotorrent.hpp
include/picotorrent/: api.hpp  common.hpp  export.hpp  picojson.hpp  plugin.hpp
include/wtl-9.0/: atlapp.h  atlcrack.h  atlctrls.h  atlctrlw.h  atlctrlx.h  atlddx.h  atldlgs.h  atldwm.h  atlfind.h  atlframe.h  atlgdi.h  atlmisc.h  atlprint.h  atlres.h  atlresce.h  atlribbon.h  atlscrl.h  atlsplit.h  atltheme.h  atluser.h  atlwince.h  atlwinx.h
installer/: PicoTorrent.wxs  PicoTorrentBundle.wxs
js/: autoadd.js  bootloader.js
js/plugins/: autoadd.js
lang/: 1027.json  1031.json  1032  1032.json  1033.json  1034.json  1035.json  1036.json  1038.json  1040.json  1042.json  1043-NL.json  1043.json  1045.json  1046  1046.json  1048.json  1049.json  1053.json  1055.json  1057.json  1058.json  1062.json  1063.json  1067.json  1079.json  1090.json  2052.json  German.json  ar-SA.json  az-AZ.json  bg-BG.json  ca-ES.json  ca.json  cs-CZ.json  de-DE.json  de.json  el-GR.json  el.json  en-US.json  (+40 more)
lib/: picotorrent.py
lib/picotorrent/: __init__.py  add_torrent_controller.py  logger.py  session_manager.py  update_checker.py
linux/: build.sh  install-libtorrent.sh
packaging/AppX/: PicoTorrent.mapping  PicoTorrent.mapping.template  PicoTorrentManifest.xml  PicoTorrentManifest.xml.template
packaging/Chocolatey/: picotorrent.nuspec
packaging/UWP/: PicoTorrent.mapping.template  PicoTorrentManifest.xml.template
packaging/WiX/: PicoTorrent.Components.wxs  PicoTorrent.Directories.wxs  PicoTorrent.wxs  PicoTorrentBundle.wxs
plugins/importer/: CMakeLists.txt
plugins/importer/src/: Importer.cpp  resources.h  resources.rc
plugins/importer/src/Controllers/: ImportTorrentsController.cpp  ImportTorrentsController.hpp
plugins/importer/src/Sources/: Source.hpp  qBittorrentSource.cpp  qBittorrentSource.hpp  uTorrentSource.cpp  uTorrentSource.hpp
plugins/importer/src/Wizard/: ConfigurePage.cpp  ConfigurePage.hpp  ImportWizard.cpp  ImportWizard.hpp  PreviewPage.cpp  PreviewPage.hpp  QBittorrentPage.cpp  QBittorrentPage.hpp  UTorrentPage.cpp  UTorrentPage.hpp  WelcomePage.cpp  WelcomePage.hpp  WizardState.hpp
plugins/javascript/: CMakeLists.txt
plugins/torrent-details-files/: CMakeLists.txt
plugins/torrent-details-files/src/: plugin.cpp  plugin.hpp
plugins/torrent-details-overview/: CMakeLists.txt  README.md
plugins/torrent-details-overview/src/: plugin.cpp  plugin.hpp
plugins/torrent-details-peers/: CMakeLists.txt
plugins/torrent-details-peers/src/: plugin.cpp  plugin.hpp
plugins/updatechecker/: CMakeLists.txt
plugins/websocket/: CMakeLists.txt
plugins/websocket/src/: TorrentEventSink.cpp  TorrentEventSink.hpp  WebSocket.cpp
plugins/websocket/src/Config/: WebSocketConfig.cpp  WebSocketConfig.hpp
plugins/websocket/src/Messages/: PicoStateMessage.cpp  PicoStateMessage.hpp  TorrentAddedMessage.cpp  TorrentAddedMessage.hpp  TorrentFinishedMessage.cpp  TorrentFinishedMessage.hpp  TorrentRemovedMessage.cpp  TorrentRemovedMessage.hpp  TorrentsUpdatedMessage.cpp  TorrentsUpdatedMessage.hpp
plugins/websocket/src/Serialization/: TorrentSerializer.cpp  TorrentSerializer.hpp
res/: Microsoft_VC140_CRT_x64.msm  app.xpm
res/dbmigrations/: 20181208115043_create_setting_table.sql  20181208115732_insert_default_settings.sql  20181211212324_create_torrent_table.sql  20181211212637_create_torrent_resume_data_table.sql  20181211213708_create_column_state_table.sql  20181212205212_create_session_state_table.sql  20181212213425_create_log_table.sql  20190320111141_insert_ui_settings.sql  20190322145531_create_list_state_table.sql  20191222212037_create_torrent_magnet_uri_table.sql  20200214214712_create_path_history_table.sql  20200403220617_create_persistence_table.sql  20200512234312_create_listen_interface_table.sql  20200512234426_insert_default_listen_interface.sql  20200513225831_create_dht_bootstrap_node_table.sql  20200823145617_insert_tracker_settings.sql  20200912230012_enhance_setting_table.sql  20200916213321_insert_locale_name_setting.sql  20200919221011_create_label_table.sql  20200925235912_save_resume_data_interval.sql  20200927003412_rss_tables.sql  20201015200912_insert_console_settings.sql  20201027213145_insert_overview_columns.sql  20201107234213_setup_filters.sql  20201219222232_insert_connections_limit.sql  20201227195100_insert_ipfilter_settings.sql  20220508103321_insert_theme_id.sql  (+1 more)
scripts/: Get-UniqueLanguageKeys.ps1
src/: CMainFrame.cpp  CMainFrame.hpp  Clipboard.cpp  Clipboard.hpp  CommandLine.cpp  CommandLine.hpp  Configuration.cpp  Configuration.hpp  Configuration_Section.cpp  Configuration_SessionSection.cpp  Configuration_UISection.cpp  Environment.cpp  Environment.hpp  Log.cpp  Log.hpp  Scaler.cpp  Scaler.hpp  SessionManager.cpp  SessionManager.hpp  SleepManager.cpp  SleepManager.hpp  StringUtils.hpp  Translator.cpp  Translator.hpp  UIState.cpp  UIState.hpp  UnhandledExceptionHandler.cpp  UnhandledExceptionHandler.hpp  VersionInformation.cpp  VersionInformation.cpp.in  VersionInformation.hpp  application.cpp  application.h  commandline.cpp  commandline.h  common.cpp  common.h  config.cpp  config.h  env.cpp  (+29 more)
src/API/: LoggerProxy.cpp  (+5 more)
src/pql/: .gitignore  CMakeLists.txt  Query.g4  QueryLang.g4  README.md
tools/: packages.config
(+1186 files in other folders)
